# AudioClassification

./: CMakeLists.txt  README.md  setup.sh
ObservationService/: CMakeLists.txt  package.xml
ObservationService/scripts/: average_coffee_mug_action1.npy  average_coffee_mug_action2.npy  average_paper_base_action1.npy  average_paper_base_action2.npy  average_plastic_cup_action1.npy  average_plastic_cup_action2.npy  average_pringles_action1.npy  average_pringles_action2.npy  client.py  filter.py  listener.py  serviceNode.py  talker.py
ObservationService/src/: client.cpp
ObservationService/srv/: Observation.srv
cfg/: AudioClassification.cfg
experiment logs/: experiments.ods  modified_experiment.ods
models/MovoEnvironment/: MovoEnvironment.sdf  model.config
models/cup/: cup.sdf  model.config
models/movo/: model.config  movo.sdf  movo.urdf
models/robotBoundingBoxes/: model.config  robotBoundingBoxes.sdf
models/table/: model.config  table.sdf
plugins/: CMakeLists.txt
plugins/heuristicPlugin/: AudioClassificationHeuristicPlugin.cpp  CMakeLists.txt
plugins/initialBeliefPlugin/: AudioClassificationInitialBeliefOptions.hpp  AudioClassificationInitialBeliefPlugin.cpp  CMakeLists.txt
plugins/observationPlugin/: AudioClassificationObservationPlugin.cpp  AudioClassificationObservationPluginExecution.cpp  CMakeLists.txt
plugins/rewardPlugin/: AudioClassificationRewardPlugin.cpp  CMakeLists.txt
plugins/shared/: AudioClassificationActionDiscretizer.hpp  AudioClassificationGraspingObservation.hpp  AudioClassificationUserData.hpp  Observation.h  (+2 more)
(+18 files in other folders)
